# hugedict

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.sh  ci.yml  manual_build.sh  publish.yml  pydiscovery.py  test.sh
benchmarks/: .gitignore  bench_batch_get.py  data.py  requirements.txt  rocksdb_load.py  rocksdb_read.py
benchmarks/hugedict_v1/: loader.py  mrsw_rocksdb.py
benchmarks/hugedict_v1/parallel/: __init__.py  fn_wrapper.py  manager.py  parallel.py
benchmarks/hugedict_v1/tests/: test_parallel.py
benchmarks/wdentity/: gen_data.py  load_db.py  load_db.sh  read_speed.py  read_speed.sh  report.ipynb
containers/manylinux2010_x86_64/: Dockerfile
containers/manylinux2014_x86_64/: Dockerfile  build.sh  entrypoint.sh  start_docker.sh
docs/: package-requirements.txt  requirements.txt
docs/source/: .gitignore  api.rst  conf.py  development.rst  getting-started.rst  glossary.rst  index.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: layout.html
hugedict/: cachedict.py  chained_mapping.py  loader.py  misc.py  mrsw_rocksdb.py  parallel.py  prelude.py  ray_parallel.py  rocksdb.py  sqlite.py  sqlitedict.py  types.py
hugedict/core/: rocksdb.pyi
hugedict/hugedict/: __init__.pyi  rocksdb.py  rocksdb.pyi
hugedict/parallel/: __init__.py  fn_wrapper.py  manager.py  parallel.py
hugedict/v1/: __init__.py  mrsw_rocksdb.py  rocksdb.py
hugedict/v1/parallel/: __init__.py  fn_wrapper.py  manager.py  parallel.py
scripts/: test_bloomfilter_2.py  test_bloomfilter_multiprocessing.py  test_bloomfilter_multiprocessing_not_working.py  test_close_db.py  test_db_haskey.py  test_mrsw.py  test_parallel.py  test_parallel_break_syncmanager.py  test_parallel_lock.py  test_parallel_lock2.py  test_rocksdb_multiprocess_not_working.py  verify_close_db.py  verify_mrsw.py  verify_parallel.py  verify_parallel_break_syncmanager.py  verify_pickle.py  verify_rocksdb_multiprocess_not_working.py  verify_spawn_is_just_rerun_script.py
src/: container.rs  error.rs  lib.rs  macros.rs  main.rs
src/funcs/: itemgetter.rs  mod.rs
src/rocksdb/: dict.rs  loader.rs  mod.rs  mrsw.rs  options.rs  python.rs
testdb/: LOG
tests/: __init__.py  test_parallel.py
tests/python/: conftest.py  test_mapping.py  test_parallel.py  test_sqlitedict.py
tests/python/rocksdb/: conftest.py  test_mrsw.py  test_options.py  test_rocksdbdict.py
tests/python/v1/: test_bloomfilter.py  test_parallel.py
tests/resources/: .gitignore
tests/resources/ndjson/: part-00000.jl
tests/resources/tuple2/: part-00000.jl
tests/resources/universities/: america.tsv
tests/resources/wdprops/: art.tsv  download.py  e-commerce.tsv  graph.tsv  human.tsv
tests/rocksdb/: loader.rs  mod.rs  rocksdb.rs
