[package]
name = "hugedict"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "hugedict"
# crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
bzip2 = "0.4.3"
env_logger = "0.9.0"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
indicatif = { version = "0.16.2", features = ["rayon"] }
log = "0.4.17"
# pyo3 = "0.16.3"
rayon = "1.5.3"
rocksdb = "0.18.0"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"

# [features]
# extension-module = ["pyo3/extension-module"]
# default = ["extension-module"]
