[package]
name = "hugedict"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hugedict"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
postcard = { version = "1.0.8", features = ["alloc"] }
bzip2 = "0.4.4"
env_logger = "0.10.0"
flate2 = { version = "1.0.28", features = [
    "zlib-ng",
], default-features = false }
indicatif = { version = "0.17.7", features = ["rayon"] }
log = "0.4.20"
nng = "1.0.1"
pyo3 = { version = "0.19.2", features = ["anyhow"] }
pythonize = "0.19.0"
rayon = "1.8.0"
rocksdb = "0.21.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.8.0"

[features]
extension-module = ["pyo3/extension-module"]
