[tool.poetry]
name = "hugedict"
version = "1.3.2"
description = "A dictionary-like object that is friendly with multiprocessing and uses key-value databases (e.g., RocksDB) as the underlying storage."
authors = ["Binh Vu <binh@toan2.com>"]
homepage = "https://github.com/binh-vu/hugedict"
repository = "https://github.com/binh-vu/hugedict"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lbry-rocksdb-optimized = "^0.8.1"
pybloomfiltermmap3 = "^0.5.5"
zstandard = "^0.17.0"
orjson = "^3.6.8"
loguru = "^0.6.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
