[project]
name = "hugedict"
version = "2.0.0-dev1"
authors = [
  { name = "Binh Vu", email = "binh@toan2.com" },
]
description = "A dictionary-like object that is friendly with multiprocessing and uses key-value databases (e.g., RocksDB) as the underlying storage."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.7"

dependencies = [
    "orjson >= 3.6.8, == 3.*",
    "loguru ~= 0.6.0"
    "zstandard ~= 0.17.0",
    "tqdm >= 4.64.0, == 4.*",
    "pybloomfiltermmap3 ~= 0.5.5",
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
test = [
    "pytest >= 6.2.5",
    "pytest-cov[all]"
]

[project.urls]
Homepage = "https://github.com/binh-vu/hugedict"
Repository = "https://github.com/binh-vu/hugedict"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"