[project]
name = "hugedict"
version = "2.12.1"
authors = [
  { name = "Binh Vu", email = "binh@toan2.com" },
]
description = "A dictionary-like object that is friendly with multiprocessing and uses key-value databases (e.g., RocksDB) as the underlying storage."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.8"

dependencies = [
    'orjson >= 3.9.0, < 4.0.0',
    'loguru >= 0.6.0, < 0.7.0',
    'zstandard >= 0.17.0, < 0.18.0',
    'tqdm >= 4.64.0, < 5.0.0',
    'timer4 >= 1.1.0, < 2.0.0'
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = [
    'pytest >= 7.1.3, < 8.0.0',
    'pytest-cov >= 4.0.0, < 5.0.0',
    'black >= 22.10.0, < 23.0.0',
]

[project.urls]
Homepage = "https://github.com/binh-vu/hugedict"
Repository = "https://github.com/binh-vu/hugedict"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"